HTML: Actualizei o artigo 'Sobre' e 'Ajuda' (sobretudo Esvaziar ficha). CSS: Defini uma hierarquia de z-index para os elementos com position fixed. JS: Modifiquei o métodos do menu (Realçar totais, Esvaziar e Imprimir ficha), de backup da ficha na Local Storage e de totalização acrescentando variáveis e definindo nomes mais sugestivos.

--- a/anatomia/ficha.css
+++ b/anatomia/ficha.css
@@ -116,7 +116,7 @@
         position: sticky;
         top: 0;
         background-color: var(--yt);
-        z-index: 99;
+        z-index: 333;
     }
 }
 
