--- a/anatomia/layout.css
+++ b/anatomia/layout.css
@@ -102,13 +102,14 @@ body.--overflow-h {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        max-width: calc(var(--layout-width) + 24px);
+        padding-left: 12px;
     }
 }
 
 .header {
     line-height: 2;
     box-shadow: 0 0 10px var(--gray--d);
-    z-index: 1;
 }
 
 .header__logo {
@@ -137,12 +138,6 @@ body.--overflow-h {
 }
 
 /* MENU */
-@media screen and (min-width: 945px) {
-    .header__menu {
-        margin-right: -10px;
-    }
-}
-
 .header__menu__ul {
     width: 100%;
     display: flex;
@@ -202,6 +197,7 @@ body.--overflow-h {
 .header__menu__label {
     padding: 7.5px 12px 7.5px 0;
     font-size: 12px;
+    min-height: 44px;
 }
 
 .header__menu__btn {
@@ -210,6 +206,7 @@ body.--overflow-h {
     background-color: inherit;
     color: var(--cor-de-texto);
     font-size: 12px;
+    min-height: 44px;
 }
 
 
@@ -359,13 +356,7 @@ input[data-totalgeral]:focus,
     left: 0;
     width: 100%;
     background-color: var(--reference-bgc);
-    z-index: 999;
-}
-
-@media print {
-    .reference-container {
-        display: none;
-    }
+    z-index: 666;
 }
 
 .reference-row {
@@ -402,10 +393,6 @@ input[data-totalgeral]:focus,
     .reference-row__output {
         margin: 0px;
     }
-
-    .reference-row__output--indicador {
-        padding-left: 15px;
-    }
     
     .reference-row__label {
         display: none;
@@ -429,22 +416,6 @@ input[data-totalgeral]:focus,
 }
 
 /* Artigos comuns */
-.artigo {
-    width: 700px;
-    height: 90vh;
-    padding: 20px;
-    overflow-y: scroll;
-    position: fixed;
-    top: calc(50vh - 90vh / 2);
-    right: calc(50vw - 700px / 2);
-    z-index: 1000;
-    background-color: var(--yt);
-    font-size: 13.5px;
-    line-height: 1.5;
-    display: none;
-}
-
-/* Artigos comuns */
 @media screen and (max-width: 1023px) {
     .sessao-de-artigos {
         border-top: 10px solid var(--gray--d);
@@ -463,7 +434,7 @@ input[data-totalgeral]:focus,
     right: 0;
     top: 42px;
     overflow-y: scroll;
-    z-index: 1000;
+    z-index: 999;
     padding-bottom: 100px;
     display: none;
 }
@@ -477,7 +448,7 @@ input[data-totalgeral]:focus,
         top: calc(50vh - 90vh / 2);
         right: calc(50vw - 700px / 2);
         overflow-y: auto;
-        z-index: 1000;
+        z-index: 999;
         display: none;
     }
 }
@@ -495,7 +466,8 @@ input[data-totalgeral]:focus,
     padding: 0 10px;
     position: fixed;
     top: 56px;
-    right: 2px;
+    right: 3px;
+    z-index: 1000;
     background-color: transparent;
 }
 
@@ -538,6 +510,7 @@ input[data-totalgeral]:focus,
         top: 0;
         background-color: var(--yt);
         width: 100%;
+        z-index: 999;
     }
 
     .artigo--ajuda details {
@@ -674,10 +647,8 @@ details mark {
 
 .details__moldura__legenda {
     font-size: 12px;
-    font-style: italic;
-    margin-top: 5px;
+    margin-top: 15px;
 }
-
 .details-salvar-ficha-como-pdf li {
     line-height: 2;
 }
@@ -694,7 +665,7 @@ details mark {
     position: fixed;
     right: calc(50vw - (var(--layout-width) + 15px) / 2);
     bottom: -164px;
-    z-index: 1000;
+    z-index: 999;
     visibility: hidden;
     transition: bottom 150ms;
 }
@@ -722,12 +693,6 @@ details mark {
 .dialog-box-default.--open {
     bottom: 20px;
     visibility: visible
-}
-
-@media print {
-    .dialog-box-default.--open {
-        visibility: hidden;
-    }
 }
 
 .dialog-box-default--small.--open {
@@ -781,10 +746,16 @@ details mark {
     background-color: var(--gray--4);
     position: fixed;
     top: -35px;
-    right: calc(50vw - 257px / 2);
+    right: calc(50vw - 252px / 2);
     visibility: hidden;
     transition: top .2s linear;
-    z-index: 888;
+    z-index: 666;
+}
+
+@media screen and (max-width: 1023px) {
+    .dialog-box-ir-para {
+        right: calc(50vw - 274px / 2);
+    }
 }
 
 .dialog-box-ir-para.--open {
@@ -793,63 +764,53 @@ details mark {
 }
 
 .dialog-box-ir-para__input-linha {
-    min-width: 188px;
+    width: 188px;
     padding: 2px 0 2px 5px;
     border: 2px solid var(--gray--4);
     background-color: var(--gray--d);
     text-align: left;
     font-size: 12px;
-    font-weight: 700;
 }
 
 .dialog-box-ir-para__input-linha:focus {
     border-color: var(--purple);
 }
 
-.dialog-box-ir-para__btn-ir {
-    font-weight: 700;
-    margin: 0 2px;
-    border-radius: 1px;
-    font-size: 14px;
-}
-
-.dialog-box-ir-para__btn-ir:hover {
-    background-color: var(--yt);
-    border-radius: 2px;
-}
-
-
-.dialog-box-ir-para__btn-ir:active {
-    opacity: .7;
-}
-
-.dialog-box-ir-para__btn-fechar {
+.dialog-box-ir-para__btn {
     width: 24px;
-    height: 20px;
+    margin: 0 2px;
     font-weight: 700;
-    background-color: inherit;
-    color: var(--yt);
-    font-size: 16px;
-    margin-left: 2px
-}
-
-.dialog-box-ir-para__btn-fechar:hover {
-    background-color: var(--cor-de-risco);
-    border-radius: 2px
 }
 
 @media screen and (max-width: 1023px) {
-    .dialog-box-ir-para__btn-ir {
+    .dialog-box-ir-para__btn {
         width: 35px;
     }
+}
 
-    .dialog-box-ir-para__btn-fechar {
-        width: 30px;
-    }
+.dialog-box-ir-para__btn:active {
+    opacity: .7;
+}
 
-    .dialog-box-ir-para {
-        right: calc(50vw - 276px / 2);
-    }
+.dialog-box-ir-para__btn:hover {
+    border-radius: 2px;
+    background-color: var(--yt);
+}
+
+.dialog-box-ir-para__btn--ir {
+    font-size: 14px;
+    border-radius: 1px;
+}
+
+.dialog-box-ir-para__btn--fechar {
+    height: 20px;
+    font-size: 16px;
+    background-color: inherit;
+    color: var(--yt);
+}
+
+.dialog-box-ir-para__btn--fechar:hover {
+    background-color: var(--cor-de-risco);
 }
 
 .dialog-box-esvaziar-ficha {
@@ -862,7 +823,7 @@ details mark {
     background: var(--yt);
     top: calc(50vh - 443px / 2);
     right: calc(50vw - 375px / 2);
-    z-index: 1000;
+    z-index: 999;
     position: fixed;
     overflow: auto;
     display: none;
@@ -993,7 +954,7 @@ details mark {
     position: fixed;
     top: 0;
     background-color: var(--black--alpha-5);
-    z-index: 999;
+    z-index: 888;
 }
 
 @media print {
@@ -1008,6 +969,10 @@ details mark {
 }
 
 /* Classes Reutilizaveis */
+.celula-n-a {
+    background-color: var(--fullblack);
+}
+
 .--display-flex-xy-center {
     display: flex;
     justify-content: center;
@@ -1063,8 +1028,6 @@ details mark {
     font-weight: bold;
 }
 
-.celula-n-a {
-    background-color: var(--fullblack);
-    position: relative;
-    z-index: 20;
+.--display-none {
+    display: none;
 }
